Fix tests breaking because of `customfields`